--- a/templates/base.html
+++ b/templates/base.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="{{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/clean-blog.min.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css') }}" type="text/css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/clean-blog.min.css') }}" type="text/css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
+
     <title>Hello Flask</title>
 </head>
 <body>
@@ -15,7 +17,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand" href="{{ url_for('index') }}">Start Bootstrap</a>
+      <a class="navbar-brand" href="{{ url_for('index') }}">Thorin &amp; Company</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -40,14 +42,14 @@
   </nav>
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('{{ url_for('static', filename='img/home-bg.jpg') }}')">
+  <header class="masthead" style="background-image: url('https://external-preview.redd.it/thorin-and-company-by-art-calavera-v0-QMvOxqHkiYpyhsyd_uOstkqKMkohCYubLXlhB6kDpAc.png?auto=webp&s=0b4840829c1859f1813492797192657e8fff4446')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading">
-            <h1>Clean Blog</h1>
-            <span class="subheading">A Blog Theme by Start Bootstrap</span>
+            <h1>Thorin &amp; COmpany</h1>
+            <span class="subheading">Thorin and his company of dwarves</span>
           </div>
         </div>
       </div>
@@ -95,7 +97,7 @@
               </a>
             </li>
           </ul>
-          <p class="copyright text-muted">Copyright &copy; Your Website 2020</p>
+          <p class="copyright text-muted">Copyright &copy; Your Website <span id="copyright"></span></p>
         </div>
       </div>
     </div>
@@ -108,11 +110,10 @@
   <!-- Custom scripts for this template -->
   <script src="{{ url_for('static', filename='js/clean-blog.min.js') }}"></script>
 
-
+  <script>
+  $("#copyright").text(new Date().getFullYear());
+  </script>
             
-        </ul>
-    </nav>
-
 
 </body>
 </html>
